tests/type/bad/logical_on_int.hel
foreign io_unit: IO<()>;

x = 1 && 2;

main = io_unit;
